Fixed buttons spacing

--- a/style.css
+++ b/style.css
@@ -27,20 +27,36 @@ div.screen{
     box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-around;
     width: 300px;
     height: 50px;
     border: 3px solid wheat;
     background: #A0A0A0;
     border-radius: 10px;
     padding-right: 10px;
-    font-size: larger;
+}
+
+div.equation{
+    display: flex;
+    justify-content: flex-start;
+    width: 100px;
+    height: 30px;
+    /* border: 1px solid black; */
+    align-items: center;
+    font-size: large;
+}
+div.answer{
+    display: flex;
+    justify-content: flex-end;
+    width: 100px;
+    height: 30px;
+    /* border: 1px solid black; */
+    align-items: center;
+    font-size: large;
 }
 
 div.buttons{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     width: 300px;
     height: 300px;
     border:3px solid wheat;
@@ -48,10 +64,36 @@ div.buttons{
     border-radius: 10px;
 }
 
+div.numbers{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-around;
+    flex: 1;
+    flex-wrap: wrap;
+    width: 400px;
+    height: 300px;
+    /* border: 1px solid black; */
+
+}
+
+div.operations{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex: 0 1 auto;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100px;
+    height: 300px;
+    /* border: 1px solid black; */
+}
+
 button{
-    width: 65px;
-    height: 65px;
-    border: 1px solid grey;
-    border-radius: 50%;
+    width: 55px;
+    height: 55px;
+    border-radius: 10px;
+
+    /* border: 1px solid grey; */
+    /* border-radius: 50%; */
     font-size: large;
 }
